{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 76,
  "lineage": "abc9b044-a45e-5f1c-b8ac-8902f924aa33",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:707945749733:instance/i-05fca3600ba39223d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fca3600ba39223d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new-cert",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-082d27571bc0c4f0c",
            "private_dns": "ip-10-0-0-108.ec2.internal",
            "private_ip": "10.0.0.108",
            "public_ip": "54.88.43.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075f8a71f2b8b1181",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0302701a3415fdcbb",
            "tags": {
              "Name": "Pub_VM"
            },
            "tags_all": {
              "Name": "Pub_VM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c14e501f76ee478d"
            ]
          },
          "dependencies": [
            "module.aws.aws_security_group.sg",
            "module.aws.aws_subnet.sub_pub",
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:707945749733:instance/i-00b5ff77d062e8d6f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b5ff77d062e8d6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "recovery",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01544e794a64250f3",
            "private_dns": "ip-10-0-0-147.ec2.internal",
            "private_ip": "10.0.0.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d635ce5a1c5f53f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd7844617067183a",
            "tags": {
              "Name": "Pvt_VM"
            },
            "tags_all": {
              "Name": "Pvt_VM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c14e501f76ee478d"
            ]
          },
          "dependencies": [
            "module.aws.aws_security_group.sg",
            "module.aws.aws_subnet.sub_pvt",
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:internet-gateway/igw-0fc3e2052805ad5da",
            "id": "igw-0fc3e2052805ad5da",
            "owner_id": "707945749733",
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route_table_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc3e2052805ad5da",
            "id": "r-rtb-01d67d7101e7bfafc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d67d7101e7bfafc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.igw",
            "module.aws.aws_route_table.route_table_pub",
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:route-table/rtb-01d67d7101e7bfafc",
            "id": "rtb-01d67d7101e7bfafc",
            "owner_id": "707945749733",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:route-table/rtb-050e9f17d40278395",
            "id": "rtb-050e9f17d40278395",
            "owner_id": "707945749733",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_route_table_pub_sub_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a1d0bfc4fa8ffa1",
            "route_table_id": "rtb-01d67d7101e7bfafc",
            "subnet_id": "subnet-0302701a3415fdcbb"
          },
          "dependencies": [
            "module.aws.aws_route_table.route_table_pub",
            "module.aws.aws_subnet.sub_pub",
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_route_table_pvt_sub_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ab939843066098",
            "route_table_id": "rtb-050e9f17d40278395",
            "subnet_id": "subnet-0cd7844617067183a"
          },
          "dependencies": [
            "module.aws.aws_route_table.route_table_pvt",
            "module.aws.aws_subnet.sub_pvt",
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:security-group/sg-0c14e501f76ee478d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c14e501f76ee478d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230321093321879900000001",
            "name_prefix": "terraform-",
            "owner_id": "707945749733",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:subnet/subnet-0302701a3415fdcbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0302701a3415fdcbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "707945749733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:subnet/subnet-0cd7844617067183a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd7844617067183a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707945749733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07051a6b57aa37127"
          },
          "dependencies": [
            "module.aws.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707945749733:vpc/vpc-07051a6b57aa37127",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-00fa40172d9fb425e",
            "default_route_table_id": "rtb-0a0ccbc281a9d0c5d",
            "default_security_group_id": "sg-0d1490b3c9cbd1968",
            "dhcp_options_id": "dopt-026a9b9bbbc8145b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07051a6b57aa37127",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0ccbc281a9d0c5d",
            "owner_id": "707945749733",
            "tags": {
              "Name": "vpc_Terraform"
            },
            "tags_all": {
              "Name": "vpc_Terraform"
            }
          }
        }
      ]
    }
  ]
}